catalog/src/main/fabric8/catalog-deployment.yml
apiVersion: v1
kind: Deployment
metadata:
  name: ${project.artifactId}
spec:
  template:
    spec:
      containers:
        - env:
            - name: SPRING_PROFILES_ACTIVE
              value: openshift
            - name: SPRING_DATASOURCE_USERNAME
              valueFrom:
                secretKeyRef:
                  name: catalog-database-secret
                  key: user
            - name: SPRING_DATASOURCE_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: catalog-database-secret
                  key: password
